Use better accepted conversion in newer java versions